devops/kube/resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: book
  labels:
    app: book
spec:
  ingressClassName: nginx
  rules:
    - host: book.taylor.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: angular-web-front
                port:
                  number: 8081
    - host: api.taylor.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: rest-api
                port:
                  number: 8080
